--- a/art-and-exhibitions/index.html
+++ b/art-and-exhibitions/index.html
@@ -28,6 +28,10 @@
         </div>
     </header>
     <main>
+        <div class="filter">
+            <div class="categories"></div>
+            <div class="years"></div>
+        </div>
         <div class="artContainer"></div>
     </main>
 
