--- a/static/index.html
+++ b/static/index.html
@@ -40,8 +40,10 @@
         </div>
 
         <div class="artExhibitions">
-            <h2>Art & Exhibitions</h2>
-            <a href="#">View all</a>
+            <div class="artExhibitionsLink">
+                <h2>Art & Exhibitions</h2>
+                <a href="#">View all</a>
+            </div>
             <div class="cardContainer"></div>
         </div>
 
