--- a/press/detail/index.html
+++ b/press/detail/index.html
@@ -22,7 +22,8 @@
                     <li><a href="static/contact.html"> contact</a></li>
 
                 </ul>
-                <div class="logo"> <a href="static/index.html">Arne Quinze</a></div>
+                <div class="logo"><a href="static/index.html"><img src="static/img/logo.png" alt="logo"></a></div>
+
             </nav>
         </div>
         </div>
@@ -63,7 +64,7 @@
                 <li>François Fornieri,private collector</li>
                 <li>Maruani Mercier gallery</li>
             </ul>
-            <h2>My Secret Garden</h2>
+            <h2><strong>My Secret Garden</strong></h2>
             <p>For the new series of Lupine artworks, nature was once again Arne Quinze’s main inspiration. These sculptures are
                 distillations of nature that appear to have grown organically as a result of continuous attractive and repulsive
                 impulses with the aim of preserving a balance, albeit delicate. At first sight they may perhaps appear fragile,
@@ -91,7 +92,7 @@
                 <li>Ramosissima, Arne Quinze — 2019, part of the 'My Secret Garden' collection, acrylic on aluminium,
                     340x210x580cm (LxBxH), approx.. 1350kg</li>
             </ul>
-            <h2>Diversity</h2>
+            <h2><strong>Diversity</strong></h2>
             <p>In each of Arne Quinze’s recent works we encounter a seemingly chaotic confrontation between individual elements
                 that form an integral part of a biotope that is created in laboratory conditions and is multiplied organically.
                 The variety of colour and form is as wide as the viewer’s imagination. The artist hereby depicts a society as a
@@ -111,7 +112,7 @@
                 since Quinze’s birth in 1971 is abhorrent to him. It is in everyone’s interest to protect and restore
                 ecosystems.
             </p>
-            <h2>Biography</h2>
+            <h2><strong>Biography</strong></h2>
             <p>Arne Quinze was born in Belgium in 1971 and currently lives and works in Sint-Martens-Latem, a town near the
                 Belgian city of Ghent. His early career in the 1980s was as a graffiti artist, without having completed an
                 official art education. He questioned the role of our cities and started his search for cities to become open
@@ -124,15 +125,146 @@
                 Mumbai, Sao Paolo,… Quinze has been intervening in cities now for over 25 years, and many projects are still
                 lined up to be finalised.
             </p>
-            ARNE QUINZE
-            www.arnequinze.com
-            ForPRESS:
-            BRAM COUDIJZER
-            bram@arnequinze.com
-            M +32 472 32 51 51
+            <div class="contactPress">
+                <p>ARNE QUINZE</p>
+                <p>www.arnequinze.com</p>
+                <p>ForPRESS:</p>
+                <p>BRAM COUDIJZER</p>
+                <p>bram@arnequinze.com</p>
+                <p>M +32 472 32 51 51</p>
+            </div>
         </div>
-    </main>
+        <div class="documentAndFiles">
 
+            <div class="documentCard">
+                <img src="press/detail/img/file.svg" alt="file">
+                <a href="#">download docx</a>
+                <p>(21.73KB)</p>
+            </div>
+            <div class="documentCard">
+                <img src="press/detail/img/file.svg" alt="file">
+                <a href="#">download docx</a>
+                <p>(720.60KB)</p>
+            </div>
+            <div class="documentCard">
+                <img src="press/detail/img/file-zip.svg" alt="file">
+                <a href="#">download docx</a>
+                <p>(720.60KB)</p>
+            </div>
+            </div>
+            <div class="imagesPress">
+                <div class="imageCardPress">
+                
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/596619bc18b1589494a97c9c37a9778f.jpg" alt="596619bc18b1589494a97c9c37a9778f.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/df8124695016f4d85556048a6e33cd36.jpg" alt="df8124695016f4d85556048a6e33cd36.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/c337b7b2b7013d3b2b08de330b2f0850.jpg" alt="c337b7b2b7013d3b2b08de330b2f0850.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/486af8c6b974fda0d9ce6566c387f04d.jpg" alt="486af8c6b974fda0d9ce6566c387f04d.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/eb736eb22376f9816697e45b2abbefe9.jpg" alt="eb736eb22376f9816697e45b2abbefe9.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/b73fc6e356d91fd162f278926feb95f2.jpg" alt="b73fc6e356d91fd162f278926feb95f2.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/44c0924e9412125b535e5c7229f10812.jpg" alt="44c0924e9412125b535e5c7229f10812.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/6ef308f2c8c8ef46db2eeaa0115ab022.jpg" alt="6ef308f2c8c8ef46db2eeaa0115ab022.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/268a54494e8bcd0448a91f06ef624d32.jpg" alt="268a54494e8bcd0448a91f06ef624d32.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/3780591cf016daa97614c2110820258e.jpg" alt="3780591cf016daa97614c2110820258e.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/95cc33e593e8fdeafe3312a76484876c.jpg" alt="95cc33e593e8fdeafe3312a76484876c.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/ec99deaf1f577f1223ad4bac5baafc04.jpg" alt="ec99deaf1f577f1223ad4bac5baafc04.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/8184994ab6a0f051a5ad49cafa7f97d2.jpg" alt="8184994ab6a0f051a5ad49cafa7f97d2.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/2d0898f1e215baf439704dc6584403f4.jpg" alt="2d0898f1e215baf439704dc6584403f4.jpg">
+                    <a href="#">download image</a>
+                </div>
+                <div class="imageCardPress">
+                    <img src="press/detail/img/211506ff9c1ed7addff3dbef8f04b77a.jpg" alt="211506ff9c1ed7addff3dbef8f04b77a.jpg">
+                    <a href="#">download image</a>
+                </div>
+
+        </div>
+
+        <div class="button"><button type="button" class="buttonTop">Go To Top</button></div>
+    </main>
+    <footer>
+        <div class="socials">
+            <ul>
+                <li><a href="https://nl.pinterest.com/arnequinze/"><img
+                            src="static/img/social icons/pinterest-square-brands.svg" alt="pinterest"><br> pinterest</a>
+                </li>
+                <li><a href="https://www.facebook.com/arnequinze"><img
+                            src="static/img/social icons/facebook-square-brands.svg" alt="facebook"><br> facebook</a>
+                </li>
+                <li><a href="https://www.instagram.com/arnequinze/"><img
+                            src="static/img/social icons/instagram-brands.svg" alt="instagram"><br> instagram</a></li>
+                <li><a href="https://www.youtube.com/user/QuinzeArne"><img
+                            src="static/img/social icons/youtube-brands.svg" alt="youtube"><br> youtube</a></li>
+                <li><a href="https://twitter.com/quinzearne"><img src="static/img/social icons/twitter-brands.svg"
+                            alt="twitter"><br> twitter</a></li>
+            </ul>
+
+        </div>
+
+        <div class="footer">
+            <div class="containerFooter">
+                <h2>Stay informed</h2>
+                <label for="email"></label>
+                <input type="email" placeholder="e-mail" id="email" name="user_email">
+                <input type="submit" value="subscribe" name="submit">
+                <div class="instaContainer">
+                    <h2>Arne Quinze</h2>
+                    <a href="https://www.instagram.com/arnequinze/">Visit our Instagram</a>
+                    <div class="footerImg">
+                        <div class="instaImg"><img src="static/img/2714183459213040996.jpg" loading="lazy" alt="footer img"></div>
+                        <div class="instaImg"><img src="static/img/2713504972441583411.jpg" loading="lazy" alt="footer img"></div>
+                        <div class="instaImg"><img src="static/img/2712692866486024238.jpg" loading="lazy" alt="footer img"></div>
+                        <div class="instaImg"><img src="static/img/2711328848122946800.jpg" loading="lazy" alt="footer img"></div>
+                        <div class="instaImg"><img src="static/img/2708359731166264287.jpg" loading="lazy" alt="footer img"></div>
+                    </div>
+                </div>
+                <p>© Arne Quinze, all rights reserved</p>
+                <a href="https://www.arnequinze.com/terms-and-conditions">terms & conditions</a> -
+                <a href="https://www.arnequinze.com/privacy-policy">privacy policy</a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="static/js/totop.js"></script>
 </body>
 
 </html>
