--- a/art-and-exhibitions/index.html
+++ b/art-and-exhibitions/index.html
@@ -22,7 +22,7 @@
 
                 </ul>
                 <div class="logo"><a href="static/index.html"><img src="static/img/logo.png" alt="logo"></a></div>
-                
+
             </nav>
         </div>
         </div>
@@ -33,9 +33,54 @@
             <div class="years"></div>
         </div>
         <div class="artContainer"></div>
+
+        <div class="button"><button type="button" class="buttonTop">Go To Top</button></div>
     </main>
+    <footer>
+        <div class="socials">
+            <ul>
+                <li><a href="https://nl.pinterest.com/arnequinze/"><img
+                            src="static/img/social icons/pinterest-square-brands.svg" alt="pinterest"><br> pinterest</a>
+                </li>
+                <li><a href="https://www.facebook.com/arnequinze"><img
+                            src="static/img/social icons/facebook-square-brands.svg" alt="facebook"><br> facebook</a>
+                </li>
+                <li><a href="https://www.instagram.com/arnequinze/"><img
+                            src="static/img/social icons/instagram-brands.svg" alt="instagram"><br> instagram</a></li>
+                <li><a href="https://www.youtube.com/user/QuinzeArne"><img
+                            src="static/img/social icons/youtube-brands.svg" alt="youtube"><br> youtube</a></li>
+                <li><a href="https://twitter.com/quinzearne"><img src="static/img/social icons/twitter-brands.svg"
+                            alt="twitter"><br> twitter</a></li>
+            </ul>
+
+        </div>
+
+        <div class="footer">
+            <div class="containerFooter">
+                <h2>Stay informed</h2>
+                <label for="email"></label>
+                <input type="email" placeholder="e-mail" id="email" name="user_email">
+                <input type="submit" value="subscribe" name="submit">
+                <div class="instaContainer">
+                    <h2>Arne Quinze</h2>
+                    <a href="https://www.instagram.com/arnequinze/">Visit our Instagram</a>
+                    <div class="footerImg">
+                        <div class="instaImg"><img src="static/img/2714183459213040996.jpg" loading="lazy" alt="footer img"></div>
+                        <div class="instaImg"><img src="static/img/2713504972441583411.jpg" loading="lazy" alt="footer img"></div>
+                        <div class="instaImg"><img src="static/img/2712692866486024238.jpg" loading="lazy" alt="footer img"></div>
+                        <div class="instaImg"><img src="static/img/2711328848122946800.jpg" loading="lazy" alt="footer img"></div>
+                        <div class="instaImg"><img src="static/img/2708359731166264287.jpg" loading="lazy" alt="footer img"></div>
+                    </div>
+                </div>
+                <p>© Arne Quinze, all rights reserved</p>
+                <a href="https://www.arnequinze.com/terms-and-conditions">terms & conditions</a> -
+                <a href="https://www.arnequinze.com/privacy-policy">privacy policy</a>
+            </div>
+        </div>
+    </footer>
 
     <script src="data/art.js"></script>
+    <script src="static/js/totop.js"></script>
     <script src="static/js/art-and-exhibtions.js"></script>
 </body>
 </html>
