--- a/static/biography.html
+++ b/static/biography.html
@@ -12,7 +12,6 @@
 
 <body>
     <header>
-
         <div class="containerNavigation">
             <nav class="navigation">
                 <ul>
@@ -24,7 +23,7 @@
 
                 </ul>
                 <div class="logo"><a href="static/index.html"><img src="static/img/logo.png" alt="logo"></a></div>
-                
+
             </nav>
         </div>
         </div>
@@ -44,7 +43,7 @@
                     themes as social interaction, urbanisation and diversity.
                 </p>
             </div>
-            <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/_9c1WVA29Bc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+            <iframe loading="lazy" src="https://www.youtube.com/embed/_9c1WVA29Bc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
             
             <div class="videoText">
                 <p>The gigantic wooden construction entitled Uchronia, which he and his team built in the Nevada desert (USA)
@@ -140,18 +139,27 @@
             </div>
         </div>
 
-
+        <div class="button"><button type="button" class="buttonTop">Go To Top</button></div>
 
     </main>
 
 
     <footer>
         <div class="socials">
-            <a href="https://nl.pinterest.com/arnequinze/">pinterest</a>
-            <a href="https://www.facebook.com/arnequinze">facebook</a>
-            <a href="https://www.instagram.com/arnequinze/">instagram</a>
-            <a href="https://www.youtube.com/user/QuinzeArne">youtube</a>
-            <a href="https://twitter.com/quinzearne">twitter</a>
+            <ul>
+                <li><a href="https://nl.pinterest.com/arnequinze/"><img
+                            src="static/img/social icons/pinterest-square-brands.svg" alt="pinterest"><br> pinterest</a>
+                </li>
+                <li><a href="https://www.facebook.com/arnequinze"><img
+                            src="static/img/social icons/facebook-square-brands.svg" alt="facebook"><br> facebook</a>
+                </li>
+                <li><a href="https://www.instagram.com/arnequinze/"><img
+                            src="static/img/social icons/instagram-brands.svg" alt="instagram"><br> instagram</a></li>
+                <li><a href="https://www.youtube.com/user/QuinzeArne"><img
+                            src="static/img/social icons/youtube-brands.svg" alt="youtube"><br> youtube</a></li>
+                <li><a href="https://twitter.com/quinzearne"><img src="static/img/social icons/twitter-brands.svg"
+                            alt="twitter"><br> twitter</a></li>
+            </ul>
 
         </div>
 
@@ -160,15 +168,16 @@
                 <h2>Stay informed</h2>
                 <label for="email"></label>
                 <input type="email" placeholder="e-mail" id="email" name="user_email">
+                <input type="submit" value="subscribe" name="submit">
                 <div class="instaContainer">
                     <h2>Arne Quinze</h2>
                     <a href="https://www.instagram.com/arnequinze/">Visit our Instagram</a>
                     <div class="footerImg">
-                        <img src="static/img/0084f503a365d8bba71626f5a3692ca9.jpg" loading="lazy" alt="footer img">
-                        <img src="static/img/0084f503a365d8bba71626f5a3692ca9.jpg" loading="lazy" alt="footer img">
-                        <img src="static/img/0084f503a365d8bba71626f5a3692ca9.jpg" loading="lazy" alt="footer img">
-                        <img src="static/img/0084f503a365d8bba71626f5a3692ca9.jpg" loading="lazy" alt="footer img">
-                        <img src="static/img/0084f503a365d8bba71626f5a3692ca9.jpg" loading="lazy" alt="footer img">
+                        <div class="instaImg"><img src="static/img/2714183459213040996.jpg" loading="lazy" alt="footer img"></div>
+                        <div class="instaImg"><img src="static/img/2713504972441583411.jpg" loading="lazy" alt="footer img"></div>
+                        <div class="instaImg"><img src="static/img/2712692866486024238.jpg" loading="lazy" alt="footer img"></div>
+                        <div class="instaImg"><img src="static/img/2711328848122946800.jpg" loading="lazy" alt="footer img"></div>
+                        <div class="instaImg"><img src="static/img/2708359731166264287.jpg" loading="lazy" alt="footer img"></div>
                     </div>
                 </div>
                 <p>© Arne Quinze, all rights reserved</p>
@@ -177,6 +186,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="static/js/totop.js"></script>
 
 </body>
 
